Resolves: fdo#36128 fix up paths for gbuild